--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
             </div>
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Seja Bem-Vindo (a)! novamente. Faça login para acessar sua conta e poder fazeras configurações no seu ambiente.</p>
+                <p>Seja Bem-Vindo (a)! novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form action="login.php" method="post" autocomplete="on">
                    <div class="campo">
-                    <span class="material-icons md-18">person</span>
+                    <i class="material-icons md-18">person</i>
                       <input type="email" name="Login" id="ilogin" placeholder="Seu-email" autocomplete="email" required maxlength="30" >
                       <label for="ilogin">Login</label>
                    </div> 
                    <div class="campo">
-                    <span class="material-icons md-18">vpn_key</span>
+                    <i class="material-icons md-18">vpn_key</i>
                     <input type="password" name="senha" id="isenha" placeholder="Digite sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                     <label for="isenha">Senha</label>
                    </div>
                    <input type="submit" value="Entrar" required>
-                   <a href="#">Esqueci a senha <span class="material-icons md-18">
+                   <a href="#" class="botao">Esqueci a senha <i class="material-icons md-18">
                     mail
-                   </span>
+                   </i>
                 </a>
                 </form>
             </div>
